Comienza desarrollo de 1.22

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -123,3 +123,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_21.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_22.yml
+    relativeToChangelogFile: true
