tg-4574 Ajusta URL de servicios utilizados al solicitar historia clinica de pacientes en otros dominios

--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -171,3 +171,5 @@ ws.renaper.dominio=DOMINIOSINAUTORIZACIONDEALTA
 
 ws.renaper.url.cobertura=/personas/cobertura
 ws.renaper.url.persona=/personas/renaper
+
+ws.bus.url.base=http://mhd.sisa.msal.gov.ar/fhir/
