tg-4574 Elimina las propiedades de ambiente del servicio Federar correspondientes a Path de URL

--- a/back-end/app/src/test/resources/integration-test.properties
+++ b/back-end/app/src/test/resources/integration-test.properties
@@ -69,7 +69,7 @@ actuator.configuration.whitelist=${ACTUATOR_WHITELIST:}
 actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 
 #========= FEDERAR ==========#
-ws.federar.url.login=/bus-auth/auth
+ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
 
 # ===============================
 # reCaptcha Google
