--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -150,18 +150,8 @@ scheduledjobs.updateethnicities.month=*
 scheduledjobs.updateethnicities.dayofweek=*
 
 # ===============================
-# FEDERAR SERVICE
+# INTEROPERABILITY SERVICES
 # ===============================
-
-ws.federar.url.login=/bus-auth/auth
-ws.federar.url.validateToken=/bus-auth/tokeninfo
-ws.federar.url.localIdSearch=/masterfile-federacion-service/fhir/Patient
-ws.federar.url.federate=/masterfile-federacion-service/fhir/Patient
-
-ws.federar.claims.aud=${ws.federar.url.base}${ws.federar.url.login}
-
-ws.federar.auth.grantType=client_credentials
-ws.federar.auth.scope=Patient/*.read,Patient/*.write
-ws.federar.auth.clientAssertionType=urn:ietf:params:oauth:client-assertion-type:jwt-bearer
+ws.federar.claims.aud=${ws.federar.url.base}/bus-auth/auth
 
 ws.bus.url.base=http://mhd.sisa.msal.gov.ar/fhir/
