--- a/dba/liquibase/incrementales-v1_22.yml
+++ b/dba/liquibase/incrementales-v1_22.yml
@@ -781,3 +781,48 @@ databaseChangeLog:
                                   nullable: false
                               name: log
                               type: VARCHAR(255)
+
+    - changeSet:
+          id:  v_nomivac_immunization_data-createView
+          comment: Create v_nomivac_immunization_data view
+          author: etrapani
+          changes:
+              -  createView:
+                     viewName: v_nomivac_immunization_data
+                     fullDefinition:  false
+                     replaceIfExists:  true
+                     selectQuery: |-
+                         WITH t AS (
+                         	SELECT inm.id, inm.patient_id, inm.snomed_id, inm.status_id, inm.administration_date, inm.expiration_date,
+                             inm.condition_id, inm.scheme_id, inm.dose, inm.dose_order, inm.institution_id, inm.lot_number,
+                             inm.note_id, inm.billable, inm.updated_on, inm.updated_by,
+                             row_number() over (partition by inm.patient_id, inm.snomed_id, inm.condition_id, inm.scheme_id, inm.dose,
+                             inm.dose_order, inm.administration_date, inm.institution_id order by inm.updated_on desc) as rw
+                             FROM document d
+                             JOIN document_inmunization di on d.id = di.document_id
+                             JOIN inmunization inm on di.inmunization_id = inm.id
+                             WHERE d.status_id = '445665009'
+                             AND d.type_id IN (4,8)
+                             AND inm.billable = true
+                             AND inm.condition_id IS NOT NULL
+                             AND inm.scheme_id IS NOT NULL
+                             AND inm.dose IS NOT NULL
+                             AND inm.dose_order IS NOT NULL
+                             AND inm.institution_id IS NOT NULL
+                         )
+                         SELECT t.id as id, t.patient_id, s.sctid as vaccine_sctid, s.pt as vaccine_pt, t.status_id,
+                         administration_date, expiration_date, t.institution_id,
+                         t.condition_id, vca.description as condition_description,
+                         t.scheme_id, vs.description as scheme_description,
+                         t.dose as dose, t.dose_order,  t.lot_number, n.description as note,
+                         t.billable, t.updated_on, t.updated_by
+                         FROM t
+                         JOIN snomed s ON snomed_id = s.id
+                         LEFT JOIN note n ON (n.id = t.note_id)
+                         JOIN vaccine_condition_application vca on (t.condition_id = vca.id)
+                         JOIN vaccine_scheme as vs on (t.scheme_id = vs.id)
+                         WHERE rw = 1
+                         AND status_id <> '723510000'
+                         ORDER BY t.updated_on DESC;
+
+
