tg-4643. Crear mecanismo de sincronización a nomivac

--- a/back-end/app/src/main/resources/application-prod.properties
+++ b/back-end/app/src/main/resources/application-prod.properties
@@ -12,4 +12,10 @@ ws.renaper.enabled = true
 ws.federar.enabled = true
 ws.federar.url.base=https://federador.msal.gob.ar
 
+# Immunization to nomivac
+ws.nomivac.synchronization.enabled=true
+ws.nomivac.synchronization.url=${ws.federar.url.base}/fhir
+
 google.recaptcha.enable = true
+
+
