--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -155,3 +155,6 @@ scheduledjobs.updateethnicities.dayofweek=*
 ws.federar.claims.aud=${ws.federar.url.base}/bus-auth/auth
 
 ws.bus.url.base=http://mhd.sisa.msal.gov.ar/fhir/
+
+# Immunization to nomivac
+ws.nomivac.synchronization.enabled=false
