tg-4722. Incorporar libreria sgx-backoffice

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -19,6 +19,7 @@
 	<modules>
 		<module>sgx-shared</module>
 		<module>sgx-dashboards</module>
+		<module>sgx-backoffice</module>
 		<module>interoperability</module>
 		<module>extensions</module>
         <module>odontology</module>
