tg-5. [Tr] [BackEnd]Crear clases de backend para conexión con cliente MQTT

--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -153,8 +153,20 @@
 			<artifactId>thymeleaf-extras-java8time</artifactId>
 			<version>3.0.1.RELEASE</version>
 		</dependency>
+        <dependency>
+            <groupId>ar.lamansys</groupId>
+            <artifactId>sgx-mqtt</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>ar.lamansys</groupId>
+			<artifactId>sgx-mqtt</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
