tg-4737. Reducción de configuraciones para los distintos ambientes y documentación

--- a/back-end/app/src/main/resources/application-prod.properties
+++ b/back-end/app/src/main/resources/application-prod.properties
@@ -13,8 +13,7 @@ ws.federar.enabled = true
 ws.federar.url.base=https://federador.msal.gob.ar
 
 # Immunization to nomivac
-ws.nomivac.synchronization.enabled=true
-ws.nomivac.synchronization.url=${ws.federar.url.base}/fhir
+ws.nomivac.synchronization.url=https://bus-dev.msal.gob.ar/fhir/
 
 google.recaptcha.enable = true
 
