--- a/back-end/interoperability/src/test/resources/nomivac-e2e-test.properties
+++ b/back-end/interoperability/src/test/resources/nomivac-e2e-test.properties
@@ -18,8 +18,7 @@ ws.federar.auth.signKey=federar
 
 #Nomivac properties
 ws.nomivac.synchronization.url.base=https://bus-dev.msal.gob.ar/fhir/
-ws.nomivac.synchronization.enabled=true
-#nomivac.synchronization.cron.config=0 0/1 * 1/1 * ?
+ws.nomivac.synchronization.cron.config=0 0/1 * 1/1 * ?
 
 # ===============================
 # INTEROPERABILITY SERVICES
