Comienza desarrollo de 1.24

--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -131,3 +131,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_23.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_24.yml
+    relativeToChangelogFile: true
