tg-4913. [P3] No se corren los test con junit5

--- a/back-end/extensions/pom.xml
+++ b/back-end/extensions/pom.xml
@@ -29,9 +29,9 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
