tg-4857 crear nuevo modulo

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -30,7 +30,8 @@
 		<module>sgx-auth</module>
 		<module>hospital-shared</module>
 		<module>immunization</module>
-	</modules>
+        <module>hospital-public-api</module>
+    </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
