--- a/back-end/app/src/test/resources/integration-test.properties
+++ b/back-end/app/src/test/resources/integration-test.properties
@@ -59,8 +59,11 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
+spring.liquibase.enabled=false
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+
 
 app.default.language=${DEFAULT_LANGUAGE:es-AR}
 app.other.languages=${OTHER_LANGUAGES:en-US}
